ProjetoCompilador/src/sintatico/Grammar.java
/* Grammar.java */
/* Generated By:JavaCC: Do not edit this line. Grammar.java */
package sintatico;

import java.util.ArrayList;
import semantico.AnalisadorSemantico;
import semantico.TabelaErrosSemantico;
import gerador.Gerador;

public class Grammar implements GrammarConstants {
public static String descricao = "";

static void error_skipto(int kind) {
  ParseException e = generateParseException();  // generate the exception object.
  //System.out.println(e.toString());  // print the error message
  Token t;
  do {
    t = getNextToken();
    if (t.kind == 0) return;
  } while (t.kind != kind);

}

static void error_skipto_before(int kind) {
  ParseException e = generateParseException();  // generate the exception object.
  //System.out.println(e.toString());  // print the error message
  Token t;
  do {
    t = getNextToken();
    t.next = Token.newToken(getToken(1).kind, getToken(1).image);
    if (t.next.kind == 0) return;
  } while (t.next == null || t.next.kind != kind);

}

static void error_skipto(Integer... kind) {
    ArrayList<Integer> lista = new ArrayList();
    for(Integer e: kind){
        lista.add(e);
    }
    Token t;
    do {
        t = getNextToken();
        if (t.kind == 0) return;
    } while (!lista.contains(t.kind));
}

static void error_skipto_before(Integer... kind) {
  ArrayList<Integer> lista = new ArrayList();
  for(Integer e: kind){
        lista.add(e);
  }
  Token t;
  do {
    t = getNextToken();
    t.next = Token.newToken(getToken(1).kind, getToken(1).image);
    if (t.next.kind == 0) return;
  } while (!lista.contains(t.next.kind));
}

static void showMessageError(int line, int column, String message, String descricao){

    String erro = "ERRO - " + message + " - Linha: " + line + " Coluna: " + column + "\u005cn";
    RecuperacaoErros.adicionarErro(erro);

    System.out.println("\u005cn=========================\u005cn" +
        message + "\u005cn" +
        "Linha: " + line + " Coluna: " + column + "\u005cn" +
        descricao
    );
}

  static final public void compilationUnit() throws ParseException {
AnalisadorSemantico.init();
        TabelaErrosSemantico.init();
    try {
      programDeclaration();
    } catch (ParseException e) {
{showMessageError(token.next.beginLine, token.next.beginColumn, "Palavra reservada program esperada", Grammar.descricao);}
        error_skipto(PONTO_VIRGULA);
    }
    try {
      bloco();
token.next = Token.newToken(getToken(1).kind, getToken(1).image);
    } catch (ParseException e) {
System.out.println("N\u00c3\u00a3o deveria passar nunca aqui");
    }
    try {
      jj_consume_token(PONTO);
AnalisadorSemantico.verificaVariaveisNaoUtilizadas();
Gerador.finalizarPrograma();
    } catch (ParseException e) {
showMessageError(e.currentToken.beginLine, e.currentToken.beginColumn, "Ponto final faltando", Grammar.descricao);
    }
    try {
      jj_consume_token(0);
    } catch (ParseException e) {
Token t;
        do{
            t = getNextToken();
            showMessageError(token.beginLine, token.beginColumn, "S\u00c3\u00admbolo inesperado", Grammar.descricao);
        } while(t.kind != EOF);
    }
  }

  static final public void programDeclaration() throws ParseException, ParseException {Token nomePrograma;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PROGRAM:{
      jj_consume_token(PROGRAM);
      break;
      }
    default:
      jj_la1[0] = jj_gen;
{if (true) throw generateParseException();}
    }
    try {
      nomePrograma = jj_consume_token(IDENTIFICADOR);
AnalisadorSemantico.addProcedure(nomePrograma.image, token.beginLine, token.beginColumn);
            AnalisadorSemantico.selectProcedure(nomePrograma.image);
            AnalisadorSemantico.setProgramaPrincipal(nomePrograma.image);

            Gerador.iniciarPrograma(nomePrograma.image);
    } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Identificador de programa faltando", Grammar.descricao);
        error_skipto(PONTO_VIRGULA);
        {if ("" != null) return;}
    }
    try {
      jj_consume_token(PONTO_VIRGULA);
    } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Ponto e v\u00c3\u00adrgula faltando", Grammar.descricao);
        error_skipto_before(INT, BOOLEAN, REAL, PROCEDURE, BEGIN);
    }
  }

  static final public void bloco() throws ParseException {Token c;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case REAL:
    case BOOLEAN:
    case IDENTIFICADOR:{
      parteDeclaracaoVariaveis();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    label_1:
    while (true) {
      if (jj_2_1(2147483647)) {
        ;
      } else {
        break label_1;
      }
      parteDeclaracaoSubRotinas();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PONTO_VIRGULA:{
        jj_consume_token(PONTO_VIRGULA);
        break;
        }
      default:
        jj_la1[2] = jj_gen;
showMessageError(token.next.beginLine, token.next.beginColumn, "Ponto e v\u00c3\u00adrgula faltando", Grammar.descricao);
      }
    }
    comandoComposto();
  }

  static final public String parteDeclaracaoVariaveis() throws ParseException {String a; String s;
a = "";
if (getToken(1).kind == IDENTIFICADOR && getToken(2).kind == IDENTIFICADOR && getToken(3).kind == PARENTESES_ABRE ||
                getToken(1).kind == IDENTIFICADOR && getToken(2).kind == PARENTESES_ABRE ) {

                    {if ("" != null) return a;}
            }
    try {
      s = declaracaoVariaveis();
a += s;
    } catch (ParseException e) {
error_skipto(PONTO_VIRGULA);
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case REAL:
      case BOOLEAN:
      case IDENTIFICADOR:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
if (getToken(1).kind == IDENTIFICADOR && getToken(2).kind == IDENTIFICADOR && getToken(3).kind == PARENTESES_ABRE ||
                getToken(1).kind == IDENTIFICADOR && getToken(2).kind == PARENTESES_ABRE ||
                getToken(1).kind == PROCEDURE) {

                    {if ("" != null) return a;}
                }
      try {
        s = declaracaoVariaveis();
a += s;
      } catch (ParseException e) {
error_skipto(PONTO_VIRGULA);
      }
    }
{if ("" != null) return a;}
    throw new Error("Missing return statement in function");
  }

  static final public String declaracaoVariaveis() throws ParseException, ParseException {String a; String s; Token t;
t = null;
a = "";
    s = tipo();
a += s;
    s = listaIdentificadores();
a += s;
    if (jj_2_2(2147483647)) {
      t = jj_consume_token(PONTO_VIRGULA);
a += t.image;
    } else {
showMessageError(token.next.beginLine, token.next.beginColumn, "Ponto e v\u00c3\u00adrgula faltando", Grammar.descricao);
    }
AnalisadorSemantico.tabelaAtual.separarVariaveis(a, token.beginLine, token.beginColumn);
{if ("" != null) return a;}
    throw new Error("Missing return statement in function");
  }

  static final public String listaIdentificadores() throws ParseException {String a; String s; Token t;
t = null;
a = "";
    s = variavel();
a += s;
    label_3:
    while (true) {
      if (jj_2_3(2147483647)) {
        ;
      } else {
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VIRGULA:{
        t = jj_consume_token(VIRGULA);
a += t.image;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
showMessageError(token.beginLine, token.beginColumn, "V\u00c3\u00adrgula faltando", Grammar.descricao);
      }
      s = variavel();
a += s;
    }
{if ("" != null) return a;}
    throw new Error("Missing return statement in function");
  }

  static final public void parteDeclaracaoSubRotinas() throws ParseException {Token nomeProcedure;
    try {
      jj_consume_token(PROCEDURE);
      try {
        nomeProcedure = jj_consume_token(IDENTIFICADOR);
AnalisadorSemantico.addProcedure(nomeProcedure.image, token.beginLine, token.beginColumn);
                AnalisadorSemantico.selectProcedure(nomeProcedure.image);
      } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Identificador de procedure esperado", Grammar.descricao);
            error_skipto_before(PONTO_VIRGULA, PARENTESES_ABRE);
      }
    } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Palavra reservada procedure esperada", Grammar.descricao);
        error_skipto_before(PONTO_VIRGULA, PARENTESES_ABRE);
    }
    declaracaoProcedimentos();
  }

  static final public void declaracaoProcedimentos() throws ParseException {
    if (jj_2_4(2147483647)) {
      try {
        jj_consume_token(PARENTESES_ABRE);
      } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Abre parentese faltando", Grammar.descricao);
      }
      parametrosFormais();
      try {
        jj_consume_token(PARENTESES_FECHA);
      } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Fecha parenteses faltando", Grammar.descricao);
                error_skipto_before(PONTO_VIRGULA, INT, REAL, BOOLEAN, BEGIN);
      }
    } else {
      ;
    }
    try {
      jj_consume_token(PONTO_VIRGULA);
    } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Ponto e v\u00c3\u00adrgula faltando", Grammar.descricao);
    }
    bloco();
  }

  static final public void parametrosFormais() throws ParseException {
    secaoParametrosFormais();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PONTO_VIRGULA:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      try {
        jj_consume_token(PONTO_VIRGULA);
      } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Ponto e v\u00c3\u00adrgula faltando", Grammar.descricao);
      }
      secaoParametrosFormais();
    }
  }

  static final public void secaoParametrosFormais() throws ParseException {String a; String s;
a = "";
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VAR:{
      try {
        jj_consume_token(VAR);
      } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Palavra reservada var esperada", Grammar.descricao);
      }
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    try {
      s = listaIdentificadores();
a += s;
    } catch (ParseException e) {
if (getToken(1).kind != DOIS_PONTOS) error_skipto_before(DOIS_PONTOS, INT, REAL, BOOLEAN, PARENTESES_FECHA, PONTO_VIRGULA);
    }
    try {
      jj_consume_token(DOIS_PONTOS);
    } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Dois pontos faltando", Grammar.descricao);
    }
    try {
      s = tipo();
a += s;
    } catch (ParseException e) {
if (getToken(1).kind != PARENTESES_FECHA) {
                error_skipto_before(PARENTESES_FECHA, PONTO_VIRGULA, INT, REAL, BOOLEAN, BEGIN);
            }
    }
AnalisadorSemantico.tabelaAtual.separarParametros(a, token.beginLine, token.beginColumn);
  }

  static final public String tipo() throws ParseException, ParseException {Token a;
a = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      a = jj_consume_token(INT);
      break;
      }
    case BOOLEAN:{
      a = jj_consume_token(BOOLEAN);
      break;
      }
    case REAL:{
      a = jj_consume_token(REAL);
      break;
      }
    default:
      jj_la1[7] = jj_gen;
showMessageError(token.next.beginLine, token.next.beginColumn, "Identificador de tipo esperado", Grammar.descricao);
                {if (true) throw generateParseException();}
    }
{if ("" != null) return a.image;}
    throw new Error("Missing return statement in function");
  }

///////////////////////////////////////
///////////////////////////////////////
///////////////////////////////////////
  static final public 
void comandoComposto() throws ParseException {
    try {
      jj_consume_token(BEGIN);
    } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Palavra reservada begin esperada", Grammar.descricao);
            error_skipto(IDENTIFICADOR, READ, WRITE, IF, WHILE);
    }
    try {
      comando();
    } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Comando estruturado incorretamente", Grammar.descricao);
            if (getToken(1).kind == BEGIN) {
                error_skipto(END);
            }
    }
if (getToken(1).kind == EOF || getToken(1).kind == PONTO) {
                {if ("" != null) return;}
            }
    label_5:
    while (true) {
      ;
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case END:{
          jj_consume_token(END);
          if (jj_2_5(2147483647)) {
            jj_consume_token(PONTO_VIRGULA);
showMessageError(token.next.beginLine, token.next.beginColumn, "Ponto e v\u00c3\u00adrgula inesperado", Grammar.descricao);
          } else {
            ;
          }
{if ("" != null) return;}
          break;
          }
        case PONTO_VIRGULA:{
          jj_consume_token(PONTO_VIRGULA);
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (ParseException e) {
showMessageError(token.next.beginLine, token.next.beginColumn, "Comando incorreto, ponto e v\u00c3\u00adrgula faltando ou palavra reservada end faltando", Grammar.descricao);
            error_skipto_before(PONTO_VIRGULA, END);
      }
      try {
        comando();
      } catch (ParseException e) {
//showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Comando estruturado incorretamente", Grammar.descricao);

            if (getToken(1).kind == BEGIN) {
                error_skipto_before(END);
            }
      }
if (getToken(1).kind == EOF || getToken(1).kind == PONTO) {
                showMessageError(token.next.beginLine, token.next.beginColumn, "Comando incorreto, ponto e v\u00c3\u00adrgula faltando ou palavra reservada end faltando", Grammar.descricao);
                {if ("" != null) return;}
            }
    }
  }

  static final public void comando() throws ParseException, ParseException {String s;
    if (jj_2_6(2147483647)) {
      chamadaProcedimento();
    } else if (jj_2_7(2147483647)) {
      comandoComposto();
    } else if (jj_2_8(2147483647)) {
      comandoCondicional();
    } else if (jj_2_9(2147483647)) {
      comandoRepetitivo();
    } else if (jj_2_10(2147483647)) {
      try {
        jj_consume_token(READ);
      } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Palavra reservada read esperada", Grammar.descricao);
      }
      try {
        jj_consume_token(PARENTESES_ABRE);
      } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Abre parenteses esperado", Grammar.descricao);
      }
      s = listaIdentificadores();
Gerador.listaVariaveisRead(s);
      try {
        jj_consume_token(PARENTESES_FECHA);
      } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Fecha parenteses esperado", Grammar.descricao);
      }
    } else if (jj_2_11(2147483647)) {
      try {
        jj_consume_token(WRITE);
      } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Palavra reservada write esperada", Grammar.descricao);
      }
      try {
        jj_consume_token(PARENTESES_ABRE);
      } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Abre parenteses esperado", Grammar.descricao);
      }
      s = listaIdentificadores();
Gerador.listaVariaveisWrite(s);
      try {
        jj_consume_token(PARENTESES_FECHA);
      } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Fecha parenteses esperado", Grammar.descricao);
      }
    } else if (jj_2_12(2147483647)) {
      atribuicao();
    } else {
{if (true) throw generateParseException();}
    }
  }

  static final public void atribuicao() throws ParseException, ParseException {String v; String valor;
valor = "";
    v = variavel();
    try {
      jj_consume_token(OP_ATRIBUICAO);
    } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Operador de atribui\u00c3\u00a7\u00c3\u00a3o esperado", Grammar.descricao);
    }
    if (jj_2_13(2147483647)) {
showMessageError(token.next.beginLine, token.next.beginColumn, "Faltou informar o que ser\u00c3\u00a1 atribuido", Grammar.descricao);
                    error_skipto_before(PONTO_VIRGULA,END);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TRUE:
      case FALSE:
      case OP_ADICAO:
      case OP_SUBTRACAO:
      case OP_NOT:
      case PARENTESES_ABRE:
      case NUMERO_INTEIRO:
      case NUMERO_REAL:
      case IDENTIFICADOR:{
        valor = expressao();
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
Gerador.atribuicaoVariavel(v);
AnalisadorSemantico.tabelaAtual.atribuirValor(v,valor,token.beginLine,token.beginColumn);
  }

  static final public void chamadaProcedimento() throws ParseException {
    try {
      jj_consume_token(IDENTIFICADOR);
    } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Identificador de procedimento esperado", Grammar.descricao);
    }
    try {
      jj_consume_token(PARENTESES_ABRE);
    } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Abre parenteses esperado", Grammar.descricao);
    }
    listaExpressoes();
    try {
      jj_consume_token(PARENTESES_FECHA);
    } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Fecha parenteses esperado", Grammar.descricao);
    }
  }

  static final public void comandoCondicional() throws ParseException, ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IF:{
      jj_consume_token(IF);
      break;
      }
    default:
      jj_la1[10] = jj_gen;
showMessageError(token.next.beginLine, token.next.beginColumn, "Palavra reservada IF esperada", Grammar.descricao);
        if (getToken(1).kind != BEGIN) {
            error_skipto_before(BEGIN, PONTO_VIRGULA);
        }
        {if (true) throw generateParseException();}
    }
    expressao();
if (getToken(1).kind == PARENTESES_FECHA) {
            showMessageError(token.next.beginLine, token.next.beginColumn, "Fecha parenteses inesperado", Grammar.descricao);
            error_skipto_before(THEN, PONTO_VIRGULA, BEGIN);
        }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case THEN:{
      jj_consume_token(THEN);
      break;
      }
    default:
      jj_la1[11] = jj_gen;
showMessageError(token.next.beginLine, token.next.beginColumn, "Palavra reservada THEN esperada", Grammar.descricao);
        if (getToken(1).kind != BEGIN) {
            error_skipto_before(BEGIN, PONTO_VIRGULA);
        }
    }
Gerador.verificaIf();
    comando();
Gerador.desvioIf();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
Gerador.verificaElse();
      comando();
Gerador.desvioElse();
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      ;
    }
  }

  static final public void comandoRepetitivo() throws ParseException, ParseException {
    try {
      jj_consume_token(WHILE);
Gerador.setExpressao(Gerador.getContador());
      expressao();
Gerador.verificaWhile();
    } catch (ParseException e) {
showMessageError(token.next.beginLine, token.next.beginColumn, "Palavra reservada WHILE esperada", Grammar.descricao);
        if (getToken(1).kind != DO) {
            error_skipto_before(DO, PONTO_VIRGULA, BEGIN, PONTO);
        }
    }
    try {
      jj_consume_token(DO);
    } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Palavra reservada DO esperada", Grammar.descricao);
        if (getToken(1).kind != BEGIN) {
            error_skipto_before(IDENTIFICADOR, BEGIN, IF, WHILE, READ, WRITE);
        }
    }
    comando();
Gerador.desvioWhile();
  }

  static final public String expressao() throws ParseException {String simboloRelacao = ""; String valor; String s;
s = "";
valor = "";
    try {
      s = expressaoSimples();
valor += s;
    } catch (ParseException e) {
error_skipto_before(END,PONTO_VIRGULA,PONTO, THEN, DO);
    }
    if (jj_2_14(2147483647)) {
      try {
        simboloRelacao = relacao();
valor += simboloRelacao;
      } catch (ParseException e) {

      }
      try {
        s = expressaoSimples();
valor += s;

      } catch (ParseException e) {
error_skipto_before(END,PONTO_VIRGULA,PONTO, THEN, DO);
      }
//montar comparação
            Gerador.verificaRelacao(simboloRelacao);
    } else {
      ;
    }
{if ("" != null) return valor;}
    throw new Error("Missing return statement in function");
  }

  static final public String expressaoSimples() throws ParseException {String valor; String s; Token t;
valor = "";
s = "";
t = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case OP_ADICAO:
    case OP_SUBTRACAO:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OP_ADICAO:{
        t = jj_consume_token(OP_ADICAO);
        break;
        }
      case OP_SUBTRACAO:{
        t = jj_consume_token(OP_SUBTRACAO);
Gerador.inverterSinal();
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
valor += t.image;
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    s = termo();
valor += s;
    label_6:
    while (true) {
      if (jj_2_15(2147483647)) {
        ;
      } else {
        break label_6;
      }
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case OP_ADICAO:{
          t = jj_consume_token(OP_ADICAO);
          break;
          }
        case OP_SUBTRACAO:{
          t = jj_consume_token(OP_SUBTRACAO);
          break;
          }
        case OP_OR:{
          t = jj_consume_token(OP_OR);
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
valor += t.image;
      } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Operador l\u00c3\u00b3gico ou aritm\u00c3\u00a9tico esperado", Grammar.descricao);
      }
      s = termo();
valor += s;
Gerador.verificarOperador(t.image);
    }
{if ("" != null) return valor;}
    throw new Error("Missing return statement in function");
  }

  static final public String relacao() throws ParseException {String valor; String s; Token t;
s = "";
valor = "";
t = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SIMBOLO_IGUAL:{
        t = jj_consume_token(SIMBOLO_IGUAL);
        break;
        }
      case SIMBOLO_DIFERENTE:{
        t = jj_consume_token(SIMBOLO_DIFERENTE);
        break;
        }
      case SIMBOLO_MENOR:{
        t = jj_consume_token(SIMBOLO_MENOR);
        break;
        }
      case SIMBOLO_MENOR_IGUAL:{
        t = jj_consume_token(SIMBOLO_MENOR_IGUAL);
        break;
        }
      case SIMBOLO_MAIOR_IGUAL:{
        t = jj_consume_token(SIMBOLO_MAIOR_IGUAL);
        break;
        }
      case SIMBOLO_MAIOR:{
        t = jj_consume_token(SIMBOLO_MAIOR);
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
valor += t.image;
    } catch (ParseException e) {
showMessageError(e.currentToken.next.beginLine, e.currentToken.next.beginColumn, "Operador l\u00c3\u00b3gico ou aritm\u00c3\u00a9tico esperado", Grammar.descricao);
    }
{if ("" != null) return valor;}
    throw new Error("Missing return statement in function");
  }
